# funny-project

./: .inscode  README.md
01-weather_soul/: obtain_weather_and_soul.py
02-funny_soul/: funny_soul.py  sqlite.db
03-mail/: obtain_weather_and_soul_and_send_mail.py
04-smart_car/car/smart_car/include/smart_car/: smart_car.h
04-smart_car/car/smart_car/msg/: Car.msg
04-smart_car/car/smart_car/src/: mqtt_client.c  publish_car.cpp
04-smart_car/car/src/smart_car/: CMakeLists.txt  package.xml
04-smart_car/car/src/smart_car/include/smart_car/: smart_car.h
04-smart_car/car/src/smart_car/src/: mqtt_client.c  publish_car.cpp
04-smart_car/mqtt-demo/: pub.py  sub.py
04-smart_car/mqtt-demo/c/: build.sh  mqtt  mqtt.c
04-smart_car/ros2-demo/ros2_01/: build.sh
04-smart_car/ros2-demo/ros2_01/src/car_publish_test/: CMakeLists.txt  package.xml
04-smart_car/ros2-demo/ros2_01/src/car_publish_test/msg/: Car.msg
04-smart_car/ros2-demo/ros2_01/src/car_publish_test/src/: publish_car_test.cpp
04-smart_car/ros2-demo/ros2_01/src/smart_car/: CMakeLists.txt
04-smart_car/ros2-demo/ros2_01/src/smart_car/src/: publish_car.cpp  subscriber_car.cpp
